--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
-#utf-8
-#Mon Sep 21 06:28:15 CEST 2009
-app.grails.version=1.1.1
-plugins.hibernate=1.1.1
+#Grails Metadata file
+#Tue Jun 15 15:00:01 EDT 2010
+app.grails.version=1.3.1
 app.name=Scala
+plugins.hibernate=1.3.1
+plugins.tomcat=1.3.1
